--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ Air duct vents cleaning can remove any hidden contaminants inside your ducts & r
                         </div>
                         <div class="ms-4">
                             <h5 class="mb-3">Trusted Service Center</h5>
-                            <span>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos.</span>
+                            <span>We guarantee you Quick & highly professional technicians, reliable customer reviews & tips.</span>
                         </div>
                     </div>
                     <div class="d-flex mb-5">
@@ -271,7 +271,7 @@ Air duct vents cleaning can remove any hidden contaminants inside your ducts & r
                         </div>
                         <div class="ms-4">
                             <h5 class="mb-3">Reasonable Price</h5>
-                            <span>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos.</span>
+                            <span>We guarantee you Quick & highly professional technicians, reliable customer reviews & tips.</span>
                         </div>
                     </div>
                     <div class="d-flex mb-0">
@@ -280,7 +280,7 @@ Air duct vents cleaning can remove any hidden contaminants inside your ducts & r
                         </div>
                         <div class="ms-4">
                             <h5 class="mb-3">24/7 Supports</h5>
-                            <span>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos.</span>
+                            <span>We guarantee you Quick & highly professional technicians, reliable customer reviews & tips.</span>
                         </div>
                     </div>
                 </div>
